
25. Fix: uninitialized numeric variables no longer crash "?" but are reported as an approprate error.

26. Change: uninitialized variables in expressions now give an unitialized variable error messages instead of general "exception raised" error message.

27. Fix: end of script warnings (like pragma deprecated/depreciated) now appear as messages when template files are used.

28. Fix: deleteIdent function refactored to eliminate inconsistent variable exporting.

29. New: session variables callbacks.  pragma session_import_script, pragma session_export_script, new session import/export type. [tests needed]

30. New: array variables may be deleted with unset.  However, anonymous array types will linger until the end of block.

31. New: teams package.  Contains the teams.member record.

32. New: teamwork pragmas.  pragma advise, blocked, clarify, dispute, propose, refactor.

33. Fix: fixed more problems with variable exporting when a block is pulled.

34. Change: uninitialized connections and queries in mysqlm give a meaningful error message instead of throwing an exception.

35. Change: style issues for non-meaningful names expanded to include amount, const, info, input, output, result, variable and variables.

36. Fix: previous help options no longer linger to another help command invocation.

37. help -t shows todo pragmas and summary of work. help -c shows teamwork pragmas.

38. Fix: pathname expansion of shell words no longer double slash when the directory is a single slash.

39. Fix: pathname expansion of tilde no longer intermittently happens in the middle of a shell word.

40. New: teams package has a new work priority type: work_priority.cvss

41. New: pragma todo's checked during late SDLC stages.

42. New: pragma suppress( low_priority_todos_for_release ) and suppress( all_todos_for_release ).  Allow low-priority todo's in late SDLC stages.  New teams_priority.completed priority.
