@@ -8,7 +8,7 @@ pragma license( unrestricted );
 
 pragma restriction( no_external_commands );
 
-procedure count_statements is 
+procedure count_statements is
 
   FILE_NAME_TO_CHECK  : string;
 
@@ -29,27 +29,27 @@ procedure count_statements is
 
   --  There are exotic cases for which this will give the wrong answer
 
-    INPUT   : file_type;
+    INPUTFILE: file_type;
     C       : character := ' ';
     LINES   : integer := 0;
     LEVEL   : integer := 0;
 
   begin
 
-    open (INPUT, in_file, FILE_NAME);
+    open (INPUTFILE, in_file, FILE_NAME);
 
     loop
-      exit when end_of_file( INPUT );
-      get (INPUT, C);
+      exit when end_of_file( INPUTFILE );
+      get (INPUTFILE, C);
 
       --  Check for comment on the line
       if C = '-' then
-        exit when end_of_file( INPUT );
-        get (INPUT, C);
+        exit when end_of_file( INPUTFILE );
+        get (INPUTFILE, C);
         --  Which is signaled by the '-' following a '-'
         if C = '-' then
           --  Then just skip the rest of the line and go to the next
-          skip_line (INPUT);
+          skip_line (INPUTFILE);
         end if;
       end if;
 
@@ -65,8 +65,8 @@ procedure count_statements is
           LEVEL := @ + 1;
           --  Read ahead until the whole construct is closed, LEVEL = 0
           while LEVEL > 0 loop
-            exit when end_of_file( INPUT );
-            get (INPUT, C);
+            exit when end_of_file( INPUTFILE );
+            get (INPUTFILE, C);
             if C = '(' then
               --  Increase the level if another '(' is found
               LEVEL := @ + 1;
@@ -81,8 +81,8 @@ procedure count_statements is
           --  Treat them in parallel, one must lead off
           if C = '"' then
             loop
-              exit when end_of_file( INPUT );
-              get (INPUT, C);
+              exit when end_of_file( INPUTFILE );
+              get (INPUTFILE, C);
               --  Loop until the close comes
               --  If there is a doubled character it just starts again
               exit when C = '"';
@@ -90,8 +90,8 @@ procedure count_statements is
           --  The '%' is handled exactly the same way as '"'
           elsif C = '`' then
             loop
-              exit when end_of_file( INPUT );
-              get (INPUT, C);
+              exit when end_of_file( INPUTFILE );
+              get (INPUTFILE, C);
               --  Loop until the close comes
               --  If there is a doubled character it just starts again
               exit when C = '`';
@@ -99,14 +99,14 @@ procedure count_statements is
           --  The '%' is handled exactly the same way as '"'
           elsif C = '%' then
             loop
-              exit when end_of_file( INPUT );
-              get (INPUT, C);
+              exit when end_of_file( INPUTFILE );
+              get (INPUTFILE, C);
               exit when C = '%';
             end loop;
           elsif C = ''' then
             loop
-              exit when end_of_file( INPUT );
-              get (INPUT, C);
+              exit when end_of_file( INPUTFILE );
+              get (INPUTFILE, C);
               --  Loop until the close comes
               --  If there is a doubled character it just starts again
               exit when C = ''';
@@ -135,8 +135,8 @@ begin
   FILE_NAME_TO_CHECK := get_line;
   new_line; new_line;
   put (LOC (FILE_NAME_TO_CHECK));
-  put (" STATEMENTS IN SCRIPT " ) @ (FILE_NAME_TO_CHECK); 
-  new_line; 
+  put (" STATEMENTS IN SCRIPT " ) @ (FILE_NAME_TO_CHECK);
+  new_line;
 end count_statements;
 
 -- VIM editor formatting instructions
