@@ -7,7 +7,7 @@
 <b>pragma</b> annotate( summary, "file_creation" );
 <b>pragma</b> annotate( description, "In this task, the job is to create a new empty file called 'output.txt' of" );
 <b>pragma</b> annotate( description, "size 0 bytes and an empty directory called 'docs'. This should be done" );
-<b>pragma</b> annotate( description, "twice: once 'her'", i.e. in the current working directory and once in the" );
+<b>pragma</b> annotate( description, "twice: once 'here', i.e. in the current working directory and once in the" );
 <b>pragma</b> annotate( description, "filesystem root. " );
 <b>pragma</b> annotate( see_also, "http://rosettacode.org/wiki/File_Creation" );
 <b>pragma</b> annotate( author, "Ken O. Burtch" );
@@ -20,16 +20,13 @@
 <b>begin</b>
    create (file_handle, out_file, "output.txt");
    close (file_handle);
-   <FONT COLOR=green><EM>-- directory_operations/create_directory is not implemented in SparForte.</EM></FONT>
-   mkdir "docs";
+   directory_operations.make_dir( "docs" );
 
    create (file_handle, out_file, "/output.txt");
    close (file_handle);
-   <FONT COLOR=green><EM>-- directory_operations/create_directory is not implemented in SparForte.</EM></FONT>
-   mkdir "/docs";
+   directory_operations.make_dir( "/docs" );
 <b>end</b> file_creation;
 
 <FONT COLOR=green><EM>-- VIM editor formatting instructions</EM></FONT>
 <FONT COLOR=green><EM>-- vim: ft=spar</EM></FONT>
-
 </PRE></BODY></HTML>
